# routes/recipes.js
@@ -4,6 +4,16 @@ const recipes_utils = require('./utils/recipes_utils');
 
 router.get('/', (req, res) => res.send('im here'));
 
+// This function will get random 3 recipes from the external api
+router.get('/random', async (req, res, next) => {
+  try {
+    const recipes = await recipes_utils.getRandomRecipes();
+    res.status(200).send(recipes);
+  } catch (error) {
+    next(error);
+  }
+});
+
 /**
  * This path returns a full details of a recipe by its id
  */
